--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -10,17 +10,8 @@
 <div class="row">
     <div class="col">
         <section>
-            <div class="btn-group btn-group-lg" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="btnradio1">@ViewData["Title"]</label>
-
-                <a class="btn btn-outline-primary" style="background-color:rgb(124, 105, 146); color:rgb(249, 229, 71); border-color:rgb(124, 105, 146); accent-color:rgb(249, 229, 71)" asp-area="" asp-controller="PPGestionnaires" asp-action="ListeVendeursAConfirmer">
-                    Liste des vendeurs à confirmer
-                </a>
-
-                <a class="btn btn-outline-primary" style="background-color:rgb(124, 105, 146); color:rgb(249, 229, 71); border-color:rgb(124, 105, 146); accent-color:rgb(249, 229, 71)" asp-area="" asp-controller="PPGestionnaires" asp-action="ListeVendeursAConfirmer">
-                    Liste des vendeurs inactifs
-                </a>
+            <div>
+                @Html.Partial("GestionVendeursPages", "ListeVendeurs")
             </div>
             
             <div class="container mt-4">
