--- a/Projet Web Commerce/Views/PPProduits/Create.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Create.cshtml
@@ -69,7 +69,7 @@ else
 
                 <div class="form-group">
                     <label asp-for="Photo" class="control-label">Photo de l’article :</label>
-                    <input type="file" id="file" name="file" accept="image/jpg" class="form-control" required />
+                    <input type="file" id="file" name="file" accept="image/*" class="form-control" required />
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
                 <br>
@@ -111,12 +111,6 @@ else
                 </div>
                 <br>
 
-                <div class="form-group" style="display:none;">
-                    <label asp-for="DateVente" class="control-label" ></label>
-                    <input asp-for="DateVente" class="form-control" />
-                    <span asp-validation-for="DateVente" class="text-danger"></span>
-                </div>
-
                 <div class="form-group">
                     <label asp-for="PrixVente" class="control-label">Prix de vente (Optionel) :</label>
                     <div class="input-group">
@@ -126,6 +120,21 @@ else
                     <span asp-validation-for="PrixVente" class="text-danger"></span>
                 </div>
                 <br>
+
+                <div class="form-group">
+                    <label asp-for="DateVente" class="control-label">Date de vente (Optionel) :</label>
+                    <input asp-for="DateVente" class="form-control" type="date" data-val="true" id="DateVente" />
+                    <span asp-validation-for="DateVente" class="text-danger"></span>
+                </div>
+                <br>
+
+                <script>
+                    var now = new Date();
+                    var isoDate = now.toISOString().slice(0, 10);
+                    document.getElementById("DateVente").min = isoDate;
+                </script>
+
+
 
                 <div class="form-group">
                     <input type="submit" value="Ajouter" class="btn btn-primary" />
