--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -106,6 +106,22 @@ else
                 </dd>
             }
 
+            <dt class="col-sm-2">
+                Date de vente :
+            </dt>
+            @if (Model.DateVente != null)
+            {
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.DateVente) 
+                </dd>
+            }
+            else
+            {
+                <dd class="col-sm-10">
+                    La date de vente n'est pas précisée
+                </dd>
+            }
+
         </dl>
     </div>
     <div>
