--- a/Projet Web Commerce/Views/PPProduits/Edit.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Edit.cshtml
@@ -115,12 +115,6 @@ else
                 </div>
                 <br>
 
-                <div class="form-group" style="display:none;">
-                    <label asp-for="DateVente" class="control-label"></label>
-                    <input asp-for="DateVente" class="form-control" />
-                    <span asp-validation-for="DateVente" class="text-danger"></span>
-                </div>
-
                 <div class="form-group">
                     <label asp-for="PrixVente" class="control-label">Prix de vente (Optionel) :</label>
                     <div class="input-group">
@@ -130,6 +124,16 @@ else
                     <span asp-validation-for="PrixVente" class="text-danger"></span>
                 </div>
                 <br>
+
+                <div class="form-group">
+                    <label asp-for="DateVente" class="control-label">Date de vente (Optionel) :</label>
+                    <input asp-for="DateVente" class="form-control" type="date" data-val="true" id="DateVente" />
+                    <span asp-validation-for="DateVente" class="text-danger"></span>
+                </div>
+                <br>
+
+
+
                 <div class="form-group">
                     <input type="submit" value="Modifier" class="btn btn-primary" />
                 </div>
@@ -143,5 +147,11 @@ else
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+        <script>
+            var now = new Date();
+            var isoDate = now.toISOString().slice(0, 10);
+            document.getElementById("datevente2").min = isoDate;
+        </script>
     }
 }
